ingress/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-svc
  labels:
    webapp: hello
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    webapp: hello
---
apiVersion: v1
kind: Service
metadata:
  name: world-svc
  labels:
    webapp: world
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    webapp: world
